<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/productTxt"
        android:text="@string/product_type"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/managerBtn" />

    <Button
        android:id="@+id/managerBtn"
        android:text="@string/manager"
        android:layout_marginTop="70dp"
        android:layout_height="60dp"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <NumberPicker
        android:id="@+id/numberScrollList"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/productTxt"
        app:layout_constraintBottom_toTopOf="@+id/listview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideLine" />

    <TextView
        android:id="@+id/costTxt"
        android:text="@string/product_total"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="90dp"
        app:layout_constraintTop_toBottomOf="@+id/productTxt"
        app:layout_constraintBottom_toTopOf="@id/listview"
        app:layout_constraintStart_toStartOf="@+id/guideLine"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/quantityTxt"
        android:text="@string/product_qty"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/numberScrollList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideLine"/>

    <Button
        android:id="@+id/buyBtn"
        android:text="@string/buy"
        android:layout_height="110dp"
        android:layout_width="100dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="200dp"
        app:layout_constraintTop_toBottomOf="@+id/costTxt"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/listview"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ListView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>